--- a/commerce (1)/commerce/pom.xml
+++ b/commerce (1)/commerce/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.5.5</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.3.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
